--- a/templates/react/vite.config.ts.template
+++ b/templates/react/vite.config.ts.template
@@ -12,4 +12,8 @@ export default defineConfig({
     outDir: 'dist',
     sourcemap: true,
   },
+  define: {
+    global: 'globalThis',
+    'process.env': {}
+  }
 }) 
