--- a/templates/react/src/App.css.template
+++ b/templates/react/src/App.css.template
@@ -10,416 +10,480 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+  background: #f8fafc;
   min-height: 100vh;
-  color: #333;
+  color: #1a202c;
+  line-height: 1.6;
 }
 
-/* Layout */
-.dashboard {
-  max-width: 1200px;
+/* App Layout */
+.app {
+  min-height: 100vh;
+  background: #f8fafc;
+  padding: 2rem 1rem;
+}
+
+.container {
+  max-width: 480px;
   margin: 0 auto;
-  padding: 20px;
-  min-height: 100vh;
 }
 
-.header {
+/* Header */
+.app-header {
   text-align: center;
-  margin-bottom: 40px;
-  color: white;
+  margin-bottom: 2rem;
 }
 
-.header h1 {
-  font-size: 2.5rem;
-  margin-bottom: 10px;
-  text-shadow: 0 2px 4px rgba(0,0,0,0.3);
+.app-header h1 {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+  font-weight: 700;
+  color: #1a202c;
+  letter-spacing: -0.025em;
 }
 
-.header p {
-  font-size: 1.2rem;
-  opacity: 0.9;
+.app-header p {
+  font-size: 1rem;
+  color: #718096;
+  font-weight: 400;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  gap: 20px;
-  align-items: start;
-}
-
-/* Cards */
-.card {
-  background: white;
-  border-radius: 12px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 24px;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-
-.card:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
-}
-
-.card h2 {
-  font-size: 1.4rem;
-  margin-bottom: 16px;
-  color: #2d3748;
+/* Main Content */
+main {
   display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+/* Connect Prompt */
+.connect-prompt {
+  background: white;
+  padding: 2rem;
+  border-radius: 16px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
+  text-align: center;
+  border: 1px solid #e2e8f0;
+}
+
+.connect-prompt h3 {
+  font-size: 1.25rem;
+  margin-bottom: 0.75rem;
+  color: #1a202c;
+  font-weight: 600;
+}
+
+.connect-prompt p {
+  color: #718096;
+  margin-bottom: 1.5rem;
+  font-size: 0.925rem;
+}
+
+/* Wallet Status */
+.wallet-status {
+  background: white;
+  border: 1px solid #e2e8f0;
+  padding: 1.5rem;
+  border-radius: 16px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
+}
+
+.status-header {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  gap: 8px;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e2e8f0;
 }
 
-/* Success and Error Cards */
-.card.success {
-  border-left: 4px solid #48bb78;
-  background: #f0fff4;
+.status-header h3 {
+  color: #1a202c;
+  margin: 0;
+  font-size: 1.125rem;
+  font-weight: 600;
 }
 
-.card.error {
-  border-left: 4px solid #f56565;
-  background: #fffafa;
+.disconnect-btn {
+  background: #f7fafc;
+  color: #718096;
+  border: 1px solid #e2e8f0;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 0.875rem;
+  font-weight: 500;
+  transition: all 0.2s;
+}
+
+.disconnect-btn:hover {
+  background: #edf2f7;
+  color: #4a5568;
+}
+
+.wallet-info p {
+  margin: 0.75rem 0;
+  color: #4a5568;
+  font-size: 0.925rem;
+}
+
+.wallet-info p:first-child {
+  font-weight: 500;
+  color: #1a202c;
+}
+
+.wallet-info .connection-info {
+  font-size: 0.825rem;
+  color: #718096;
 }
 
 /* Account Info */
-.account-info, .gas-info, .success-info {
+.account-info {
+  background: white;
+  border: 1px solid #e2e8f0;
+  padding: 1.5rem;
+  border-radius: 16px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
+}
+
+.account-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e2e8f0;
+}
+
+.account-header h3 {
+  color: #1a202c;
+  margin: 0;
+  font-size: 1.125rem;
+  font-weight: 600;
+}
+
+.refresh-btn {
+  background: #f7fafc;
+  color: #718096;
+  border: 1px solid #e2e8f0;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 0.875rem;
+  font-weight: 500;
+  transition: all 0.2s;
+}
+
+.refresh-btn:hover:not(:disabled) {
+  background: #edf2f7;
+  color: #4a5568;
+}
+
+.refresh-btn:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.account-details {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 0.75rem;
+}
+
+.detail-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1rem;
+  padding: 0.5rem 0;
+}
+
+.detail-row span:first-child {
+  color: #718096;
+  font-weight: 500;
+  min-width: 120px;
+  font-size: 0.925rem;
+}
+
+.detail-row span:last-child {
+  color: #1a202c;
+  text-align: right;
+  word-break: break-all;
+  font-size: 0.925rem;
+  font-weight: 500;
+}
+
+/* Send Form */
+.send-form {
+  background: white;
+  border: 1px solid #e2e8f0;
+  padding: 1.5rem;
+  border-radius: 16px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.06);
+}
+
+.send-form h3 {
+  color: #1a202c;
+  margin: 0 0 1.5rem 0;
+  font-size: 1.125rem;
+  font-weight: 600;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e2e8f0;
+}
+
+.form-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.form-group label {
+  color: #4a5568;
+  font-weight: 500;
+  font-size: 0.925rem;
+}
+
+.form-group input {
+  padding: 0.875rem 1rem;
+  border: 1px solid #e2e8f0;
+  border-radius: 12px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
+  font-size: 0.925rem;
+  transition: all 0.2s;
+  background: #f7fafc;
+}
+
+.form-group input:focus {
+  outline: none;
+  border-color: #3182ce;
+  background: white;
+  box-shadow: 0 0 0 3px rgba(49, 130, 206, 0.1);
+}
+
+.form-group input.error {
+  border-color: #e53e3e;
+  background: #fed7d7;
+}
+
+.error-text {
+  color: #e53e3e;
+  font-size: 0.825rem;
+  font-weight: 500;
+}
+
+.transaction-info {
+  background: #f7fafc;
+  padding: 1rem;
+  border-radius: 12px;
+  border: 1px solid #e2e8f0;
 }
 
 .info-row {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 8px 0;
-  border-bottom: 1px solid #e2e8f0;
-  flex-wrap: wrap;
-  gap: 8px;
+  margin-bottom: 0.5rem;
+  padding: 0.25rem 0;
 }
 
 .info-row:last-child {
-  border-bottom: none;
+  margin-bottom: 0;
 }
 
-.info-row strong {
-  color: #4a5568;
-  font-weight: 600;
-  min-width: 120px;
-}
-
-.info-row code {
-  background: #f7fafc;
-  padding: 4px 8px;
-  border-radius: 4px;
-  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
-  font-size: 0.85rem;
-  word-break: break-all;
-  max-width: 200px;
-}
-
-.info-row a {
-  color: #3182ce;
-  text-decoration: none;
-  word-break: break-all;
-  max-width: 200px;
-}
-
-.info-row a:hover {
-  text-decoration: underline;
-}
-
-.deployed {
-  color: #48bb78;
-  font-weight: 600;
-}
-
-.pending {
-  color: #ed8936;
-  font-weight: 600;
-}
-
-/* Forms */
-.form {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-}
-
-.form-group {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
-
-.form-group label {
-  font-weight: 600;
-  color: #4a5568;
-  font-size: 0.9rem;
-}
-
-.form-group input {
-  padding: 12px;
-  border: 2px solid #e2e8f0;
-  border-radius: 8px;
-  font-size: 1rem;
-  transition: border-color 0.2s ease, box-shadow 0.2s ease;
-}
-
-.form-group input:focus {
-  outline: none;
-  border-color: #3182ce;
-  box-shadow: 0 0 0 3px rgba(49, 130, 206, 0.1);
-}
-
-.form-group input.error {
-  border-color: #f56565;
-}
-
-.form-group input.error:focus {
-  box-shadow: 0 0 0 3px rgba(245, 101, 101, 0.1);
-}
-
-.error-text {
-  color: #f56565;
-  font-size: 0.85rem;
-  font-weight: 500;
-}
-
-/* Buttons */
-.button-group {
-  display: flex;
-  gap: 12px;
-  flex-wrap: wrap;
-}
-
-button {
-  padding: 12px 24px;
-  border: none;
-  border-radius: 8px;
-  font-size: 1rem;
-  font-weight: 600;
-  cursor: pointer;
-  transition: all 0.2s ease;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-}
-
-button:disabled {
-  opacity: 0.6;
-  cursor: not-allowed;
-}
-
-.primary {
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-  color: white;
-}
-
-.primary:hover:not(:disabled) {
-  transform: translateY(-1px);
-  box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
-}
-
-.secondary {
-  background: #f7fafc;
-  color: #4a5568;
-  border: 2px solid #e2e8f0;
-}
-
-.secondary:hover:not(:disabled) {
-  background: #edf2f7;
-  border-color: #cbd5e0;
-}
-
-.link {
-  background: none;
-  color: #3182ce;
-  padding: 8px 0;
-  text-decoration: none;
-  font-weight: 500;
-}
-
-.link:hover:not(:disabled) {
-  text-decoration: underline;
-}
-
-/* Gas Breakdown */
-.gas-breakdown {
-  margin-top: 8px;
-  padding-top: 8px;
-  border-top: 1px solid #e2e8f0;
-}
-
-.gas-breakdown small {
+.info-row span:first-child {
   color: #718096;
-  font-size: 0.8rem;
+  font-size: 0.875rem;
+  font-weight: 500;
 }
 
-/* Links */
-.links {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
-.links a {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  padding: 12px;
-  background: #f7fafc;
-  border: 1px solid #e2e8f0;
-  border-radius: 8px;
-  color: #4a5568;
-  text-decoration: none;
-  transition: all 0.2s ease;
-}
-
-.links a:hover {
-  background: #edf2f7;
-  border-color: #cbd5e0;
-  transform: translateX(4px);
-}
-
-/* Error and Loading Containers */
-.error-container, .loading-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: 100vh;
-  text-align: center;
-  padding: 40px 20px;
-  color: white;
-}
-
-.error-container h2, .loading-container h2 {
-  font-size: 2rem;
-  margin-bottom: 16px;
-}
-
-.error-container p, .loading-container p {
-  font-size: 1.1rem;
-  margin-bottom: 20px;
-  opacity: 0.9;
-}
-
-.error-details {
-  background: rgba(255, 255, 255, 0.1);
-  padding: 20px;
-  border-radius: 8px;
-  margin: 20px 0;
-  text-align: left;
-}
-
-.error-details h3 {
-  margin-bottom: 12px;
-  color: #ffd700;
-}
-
-.error-details ul {
-  list-style-position: inside;
-  color: rgba(255, 255, 255, 0.9);
-}
-
-.error-details li {
-  margin-bottom: 8px;
-}
-
-.error-container button, .loading-container button {
-  background: rgba(255, 255, 255, 0.2);
-  color: white;
-  border: 2px solid rgba(255, 255, 255, 0.3);
-  padding: 12px 24px;
-  border-radius: 8px;
+.info-row span:last-child {
+  color: #1a202c;
+  font-size: 0.875rem;
   font-weight: 600;
+}
+
+.send-btn {
+  background: #3182ce;
+  color: white;
+  border: none;
+  padding: 0.875rem 1.5rem;
+  border-radius: 12px;
   cursor: pointer;
-  transition: all 0.2s ease;
+  font-size: 0.925rem;
+  font-weight: 600;
+  transition: all 0.2s;
+  margin-top: 0.5rem;
 }
 
-.error-container button:hover, .loading-container button:hover {
-  background: rgba(255, 255, 255, 0.3);
-  border-color: rgba(255, 255, 255, 0.5);
+.send-btn:hover:not(:disabled) {
+  background: #2c5282;
+  transform: translateY(-1px);
+  box-shadow: 0 4px 12px rgba(49, 130, 206, 0.3);
 }
 
-/* Responsive */
-@media (max-width: 768px) {
-  .dashboard {
-    padding: 15px;
+.send-btn:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  transform: none;
+  box-shadow: none;
+}
+
+.success-message {
+  background: #f0fff4;
+  border: 1px solid #9ae6b4;
+  padding: 1rem;
+  border-radius: 12px;
+  color: #276749;
+}
+
+.success-message p {
+  margin: 0 0 0.5rem 0;
+  font-weight: 600;
+  font-size: 0.925rem;
+}
+
+.success-message a {
+  color: #276749;
+  text-decoration: underline;
+  font-size: 0.875rem;
+  word-break: break-all;
+  font-weight: 500;
+}
+
+.error-message {
+  background: #fed7d7;
+  border: 1px solid #fc8181;
+  padding: 1rem;
+  border-radius: 12px;
+  color: #c53030;
+}
+
+.error-message p {
+  margin: 0;
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+
+.error-message p:first-child {
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
+
+/* Address Styling */
+.address {
+  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', monospace;
+  font-size: 0.825rem;
+  background: #edf2f7;
+  padding: 0.375rem 0.75rem;
+  border-radius: 8px;
+  border: 1px solid #e2e8f0;
+  color: #4a5568;
+  font-weight: 500;
+}
+
+/* Footer */
+.app-footer {
+  text-align: center;
+  margin-top: 2rem;
+  color: #718096;
+  font-size: 0.875rem;
+}
+
+.app-footer a {
+  color: #3182ce;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.app-footer a:hover {
+  text-decoration: underline;
+}
+
+/* Responsive Design */
+@media (max-width: 640px) {
+  .app {
+    padding: 1rem 0.75rem;
   }
   
-  .header h1 {
-    font-size: 2rem;
-  }
-  
-  .header p {
-    font-size: 1rem;
-  }
-  
-  .grid {
-    grid-template-columns: 1fr;
-    gap: 15px;
-  }
-  
-  .card {
-    padding: 20px;
-  }
-  
-  .button-group {
-    flex-direction: column;
-  }
-  
-  .info-row {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 4px;
-  }
-  
-  .info-row strong {
-    min-width: auto;
-  }
-  
-  .info-row code, .info-row a {
+  .container {
     max-width: 100%;
   }
-}
-
-/* Accessibility */
-@media (prefers-reduced-motion: reduce) {
-  * {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
+  
+  .app-header h1 {
+    font-size: 1.75rem;
+  }
+  
+  .status-header,
+  .account-header {
+    flex-direction: column;
+    align-items: stretch;
+    gap: 0.75rem;
+  }
+  
+  .detail-row {
+    flex-direction: column;
+    gap: 0.25rem;
+    align-items: stretch;
+  }
+  
+  .detail-row span:last-child {
+    text-align: left;
+  }
+  
+  .connect-prompt,
+  .wallet-status,
+  .account-info,
+  .send-form {
+    padding: 1.25rem;
   }
 }
 
 /* Dark mode support */
 @media (prefers-color-scheme: dark) {
-  .card {
-    background: #2d3748;
+  body {
+    background: #1a202c;
     color: #e2e8f0;
   }
   
-  .card h2 {
-    color: #f7fafc;
+  .app {
+    background: #1a202c;
   }
   
-  .info-row {
+  .connect-prompt,
+  .wallet-status,
+  .account-info,
+  .send-form {
+    background: #2d3748;
+    border-color: #4a5568;
+  }
+  
+  .app-header h1 {
+    color: #e2e8f0;
+  }
+  
+  .app-header p {
+    color: #a0aec0;
+  }
+  
+  .status-header,
+  .account-header {
     border-bottom-color: #4a5568;
   }
   
-  .info-row strong {
-    color: #cbd5e0;
-  }
-  
-  .info-row code {
-    background: #4a5568;
+  .status-header h3,
+  .account-header h3,
+  .connect-prompt h3,
+  .send-form h3 {
     color: #e2e8f0;
   }
   
-  .form-group label {
-    color: #cbd5e0;
+  .detail-row span:last-child {
+    color: #e2e8f0;
   }
   
   .form-group input {
@@ -429,26 +493,58 @@ button:disabled {
   }
   
   .form-group input:focus {
+    background: #2d3748;
     border-color: #63b3ed;
   }
   
-  .secondary {
+  .transaction-info {
     background: #4a5568;
-    color: #e2e8f0;
     border-color: #718096;
   }
   
-  .secondary:hover:not(:disabled) {
-    background: #2d3748;
-  }
-  
-  .links a {
+  .address {
     background: #4a5568;
     border-color: #718096;
     color: #e2e8f0;
   }
   
-  .links a:hover {
+  .disconnect-btn,
+  .refresh-btn {
+    background: #4a5568;
+    color: #e2e8f0;
+    border-color: #718096;
+  }
+  
+  .disconnect-btn:hover,
+  .refresh-btn:hover:not(:disabled) {
     background: #2d3748;
   }
+  
+  .app-footer {
+    color: #a0aec0;
+  }
+} 
+
+.wallet-connect-btn {
+  background: #3182ce;
+  color: white;
+  border: none;
+  padding: 0.875rem 1.5rem;
+  border-radius: 12px;
+  cursor: pointer;
+  font-size: 0.925rem;
+  font-weight: 600;
+  transition: all 0.2s;
+  margin-top: 0.5rem;
+}
+.wallet-connect-btn:hover:not(:disabled) {
+  background: #2c5282;
+  transform: translateY(-1px);
+  box-shadow: 0 4px 12px rgba(49, 130, 206, 0.3);
+}
+.wallet-connect-btn:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  transform: none;
+  box-shadow: none;
 } 
