use custom rpc url in template

--- a/templates/react/.env.template
+++ b/templates/react/.env.template
@@ -1,3 +1,6 @@
 # SBC App Kit Configuration
 VITE_CHAIN="baseSepolia"
+# Custom RPC URL (optional) - e.g. get one from Alchemey at https://dashboard.alchemy.com/apps
+VITE_RPC_URL=
+# Get your SBC API Key at https://dashboard.stablecoin.xyz
 VITE_SBC_API_KEY={{apiKey}}
