--- a/templates/react/src/App.tsx.template
+++ b/templates/react/src/App.tsx.template
@@ -7,6 +7,7 @@ import './App.css';
 
 // Chain selection helpers
 const chain = (import.meta.env.VITE_CHAIN === 'base') ? base : baseSepolia;
+const rpcUrl = import.meta.env.VITE_RPC_URL;
 
 const SBC_TOKEN_ADDRESS = (chain) => {
   if (chain.id === baseSepolia.id) {
@@ -400,6 +401,7 @@ export default function App() {
   const sbcConfig = {
     apiKey: import.meta.env.VITE_SBC_API_KEY || '{{apiKey}}',
     chain,
+    rpcUrl,
     wallet: 'auto' as const,
     debug: true,
     walletOptions: { autoConnect: false },
