--- a/templates/react-dynamic/package.json.template
+++ b/templates/react-dynamic/package.json.template
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dynamic-labs/ethereum": "^4.25.7",
+    "@dynamic-labs/ethereum-aa": "^4.25.7",
+    "@dynamic-labs/sdk-react-core": "^4.25.7",
     "@stablecoin.xyz/core": "latest",
     "@stablecoin.xyz/react": "latest",
     "react": "^19.1.0",
@@ -16,8 +19,15 @@
     "viem": "^2.33.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.0.0",
     "vite": "^5.0.0"
   }
-} 
+}
+
+
