--- a/templates/react-para/package.json.template
+++ b/templates/react-para/package.json.template
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@getpara/react-sdk": "2.0.0-alpha.40",
+    "@getpara/viem-v2-integration": "2.0.0-alpha.40",
+    "@tanstack/react-query": "^5.0.0",
+    "wagmi": "^2.0.0",
     "@stablecoin.xyz/core": "latest",
     "@stablecoin.xyz/react": "latest",
     "react": "^19.1.0",
@@ -16,8 +20,16 @@
     "viem": "^2.33.0"
   },
   "devDependencies": {
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.17",
     "@vitejs/plugin-react": "^4.0.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vite-plugin-node-polyfills": "^0.22.0"
   }
-} 
+}
+
+
