--- a/templates/react-para/.env.template
+++ b/templates/react-para/.env.template
@@ -2,6 +2,6 @@
 VITE_SBC_API_KEY={{apiKey}}
 # Get your Para API Key at https://developer.getpara.com/
 VITE_PARA_API_KEY=your_para_api_key
-# Optional:
-VITE_CHAIN=baseSepolia
+# Supported chains: "baseSepolia" | "base" | "radiusTestnet"
+VITE_CHAIN={{chain}}
 VITE_RPC_URL=
